# webBO

./: .gitignore  Dockerfile  LICENSE  README.md  README.rst  a_test.csv  a_test_perovskites.csv  aav0693_table_s1.csv  atest_solvents.csv  docker-compose.yml  environment.yml  main.py  pyproject.toml  requirements.txt  test_dataset_mo.csv  webbo.yml
.github/workflows/: ci.yml
manuscript_figures/visualize-database/: visualize_database.py
website/: __init__.py  auth.py  bo_integration.py  datalab_data.py  dataset_forms.py  experiment_forms copy.py  experiment_forms.py  home_dash.py  models.py  settings.py  sqlalchemy_schemadisplay.py
website/static/: expt.css  index.js
website/templates/: add_measurements.html  backup_base.html  base.html  connect_datalab.html  explanations.html  home.html  login.html  parameter_space.html  run_expt.html  select_dataset_upload_method.html  send_datalab.html  setup_backup.html  setup_experiment.html  setup_experiment_mo.html  sign_up.html  tutorial.html  upload.html  video_tutorial.html  view_dataset.html  view_experiment.html
