[project]
name = "bake"
dynamic = ["version"]
dependencies = [
    'baybe',
    'flask',
    'sqlalchemy',
    'flask-sqlalchemy',
    'flask-login',
    'dash',
    'baybe[chem]',
    'flask-wtf',
]

[project.optional-dependencies]
dev = ['black', 'flake8', 'mypy', 'isort']

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
splashd = ['py.typed']

[tool.setuptools_.scm]

[tool.isort]
line_length = 79
profile = "black"

[tool.mypy]
no_implicit_optional = true

